--- a/Client/Views/Car/Create.cshtml
+++ b/Client/Views/Car/Create.cshtml
@@ -1,5 +1,5 @@
-@using Shared.Models
-@model Shared.Models.Car
+@using Client.Models
+@model Client.Models.Car
 
 @{
     ViewData["Title"] = "Skapa ny";
