--- a/Client/Views/Car/Index.cshtml
+++ b/Client/Views/Car/Index.cshtml
@@ -1,5 +1,5 @@
 @using System.Security.Principal
-@model Shared.Models.CarViewModel.CarListViewModel
+@model Client.Models.CarViewModel.CarListViewModel
 @{
     ViewData["Title"] = Html.Raw("F&#246;retagsfordon");
 }
