--- a/Client/Views/Company/Index.cshtml
+++ b/Client/Views/Company/Index.cshtml
@@ -1,4 +1,4 @@
-@model Shared.Models.CompanyViewModel.CompanyViewModel
+@model Client.Models.CompanyViewModel.CompanyViewModel
 
 @{
     ViewData["Title"] = Html.Raw("F&#246;retag");
