--- a/Client/Views/Home/Index.cshtml
+++ b/Client/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-@model Shared.Models.HomeViewModel.HomeViewModel
+@model Client.Models.HomeViewModel.HomeViewModel
 @{
     ViewData["Title"] = "Alla Fordon";
 }
