--- a/Client/Views/_ViewImports.cshtml
+++ b/Client/Views/_ViewImports.cshtml
@@ -1,6 +1,6 @@
 @using Microsoft.AspNetCore.Identity
 @using Client
-@using Shared.Models
-@using Shared.Models.AccountViewModels
-@using Shared.Models.ManageViewModels
+@using Client.Models
+@using Client.Models.AccountViewModels
+@using Client.Models.ManageViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
