--- a/Client/Views/Company/Create.cshtml
+++ b/Client/Views/Company/Create.cshtml
@@ -1,4 +1,5 @@
-@model Company
+@using Shared.Models
+@model Shared.Models.Company
 
 @{
     ViewData["Title"] = "Skapa nytt " + Html.Raw("f&#246;retag");
