--- a/Client/Views/Car/Edit.cshtml
+++ b/Client/Views/Car/Edit.cshtml
@@ -2,10 +2,10 @@
 @model Shared.Models.Car
 
 @{
-    ViewData["Title"] = Html.Raw("&#196;ndra");
+    ViewData["Title"] = "Edit";
 }
 
-<h2>&#196;ndra bil f&#246;r @ViewBag.CompanyName</h2>
+<h2>Edit vehicle for @ViewBag.CompanyName</h2>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -34,7 +34,7 @@
                 </div>
             </div>
             <div class="form-group">
-                <input type="submit" value="Spara" class="btn btn-default" />
+                <input type="submit" value="Save" class="btn btn-default" />
             </div>
         </form>
     </div>
@@ -42,7 +42,7 @@
 
 <div>
     <p>
-        <a asp-action="Index" asp-route-id="@Model.CompanyId">Tillbaka till listan</a>
+        <a asp-action="Index" asp-route-id="@Model.CompanyId">Back to list</a>
     </p>
 </div>
 
