--- a/Client/Views/Company/Edit.cshtml
+++ b/Client/Views/Company/Edit.cshtml
@@ -1,12 +1,12 @@
 @model Shared.Models.Company
 
 @{
-    ViewData["Title"] = Html.Raw("&#196;ndra");
+    ViewData["Title"] = Html.Raw("Edit");
 }
 
-<h2>&#196;ndra</h2>
+<h2>Edit</h2>
 
-<h4>F&#246;retag</h4>
+<h4>Company</h4>
 <hr/>
 <div class="row">
     <div class="col-md-4">
@@ -28,14 +28,14 @@
                 <input asp-for="CreationTime" class="form-control" disabled="disabled"/>
             </div>
             <div class="form-group">
-                <input type="submit" value="Spara" class="btn btn-default"/>
+                <input type="submit" value="Save" class="btn btn-default"/>
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Tillbaka till listan</a>
+    <a asp-action="Index">Back to list</a>
 </div>
 
 @section Scripts {
