--- a/Client/Views/Car/Create.cshtml
+++ b/Client/Views/Car/Create.cshtml
@@ -2,10 +2,10 @@
 @model Shared.Models.Car
 
 @{
-    ViewData["Title"] = "Skapa ny";
+    ViewData["Title"] = "Create new";
 }
 
-<h2>Skapa ny bil f&#246;r @ViewBag.CompanyName</h2>
+<h2>Create new vehicle for @ViewBag.CompanyName</h2>
 
 <hr />
 <div class="row">
@@ -32,7 +32,7 @@
                 </div>
             </div>
             <div class="form-group">
-                <input type="submit" value="Skapa" class="btn btn-default" />
+                <input type="submit" value="Create" class="btn btn-default" />
             </div>
         </form>
     </div>
@@ -40,7 +40,7 @@
 
 <div>
     <p>
-        <a asp-action="Index" asp-route-id="@Model.CompanyId">Tillbaka till listan</a>
+        <a asp-action="Index" asp-route-id="@Model.CompanyId">Back to list</a>
     </p>
 </div>
 
