--- a/Client/Views/Company/Create.cshtml
+++ b/Client/Views/Company/Create.cshtml
@@ -2,10 +2,10 @@
 @model Shared.Models.Company
 
 @{
-    ViewData["Title"] = "Skapa nytt " + Html.Raw("f&#246;retag");
+    ViewData["Title"] = "Create new company";
 }
 
-<h2>Skapa nytt f&#246;retag</h2>
+<h2>Create new company</h2>
 
 <hr/>
 <div class="row">
@@ -23,14 +23,14 @@
                 <span asp-validation-for="Address" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Skapa" class="btn btn-default"/>
+                <input type="submit" value="Create" class="btn btn-default"/>
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Tillbaka till listan</a>
+    <a asp-action="Index">Back to list</a>
 </div>
 
 @section Scripts {
