--- a/Client/Views/Company/Details.cshtml
+++ b/Client/Views/Company/Details.cshtml
@@ -1,13 +1,13 @@
 @model Shared.Models.Company
 
 @{
-    ViewData["Title"] = "Detaljer";
+    ViewData["Title"] = "Details";
 }
 
-<h2>Detaljer</h2>
+<h2>Details</h2>
 
 <div>
-    <h4>F&#246;retag</h4>
+    <h4>Company</h4>
     <hr/>
     <dl class="dl-horizontal">
         <dt>
@@ -31,6 +31,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.Id">&#196;ndra</a> |
-    <a asp-action="Index">Tillbaka till listan</a>
+    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
+    <a asp-action="Index">Back to list</a>
 </div>
