--- a/Client/Views/Car/Index.cshtml
+++ b/Client/Views/Car/Index.cshtml
@@ -22,7 +22,7 @@
             </tr>
         </table>
         <p>
-            <a asp-action="Create" asp-route-id="@ViewBag.CompanyId">Create new fordon</a>
+            <a asp-action="Create" asp-route-id="@ViewBag.CompanyId">Create new vehicle</a>
         </p>
     }
     else
