--- a/Client/Views/Home/Index.cshtml
+++ b/Client/Views/Home/Index.cshtml
@@ -71,7 +71,7 @@
         </table>
     </div>
     <div class="col-lg-2">
-        <h3>Visa fordon med status:</h3>
+        <h3>Show vehicles with status:</h3>
         <input onclick="doFiltering()"  id="All"  type="radio" name="status" value="All"  checked="checked">All<br>
         <input onclick="doFiltering()" id="Online" type="radio" name="status" value="Online">Online<br>
         <input onclick="doFiltering()" id="Offline" type="radio" name="status" value="Offline">Offline<br>
