--- a/Client/Views/Shared/_LoginPartial.cshtml
+++ b/Client/Views/Shared/_LoginPartial.cshtml
@@ -18,10 +18,10 @@ else
 {
     <ul class="nav navbar-nav navbar-right">
         <li>
-            <a asp-area="" asp-controller="Account" asp-action="Register">Registrera</a>
+            <a asp-area="" asp-controller="Account" asp-action="Register">Register</a>
         </li>
         <li>
-            <a asp-area="" asp-controller="Account" asp-action="Login">Logga in</a>
+            <a asp-area="" asp-controller="Account" asp-action="Login">Log in</a>
         </li>
     </ul>
 }
