Autofac dependency injection in server

--- a/Client/Views/Home/Index.cshtml
+++ b/Client/Views/Home/Index.cshtml
@@ -81,7 +81,7 @@
     </div>
     <div class="col-lg-4">
         <p class="alert-info">
-            All vehicles for all companies are shown here. Status (Offline/Online) randomly changes approximately every 10 seconds. A logged in user can manually change the status. To view and update vehicles and companies, create an account, log in and select the respective menu options.
+            All vehicles for all companies are shown here. Status (Offline/Online) randomly changes approximately every 10 seconds. A logged in user can manually change the status. To view and update vehicles and companies, create an account, log in and select the respective menu dbContextOptionsBuilder.
             <br /><br />
             If you press F12 and select "Console" you can see when the status changes for each car using Javascript in the browser.
         </p>
